--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <!-- saved from url=(0034)https://www.usabmx.com/#&slider1=1 -->
-<html class="no-js translated-ltr" lang="es"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html class="no-js translated-ltr" lang="es"><!--<![endif]--><head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16583463485"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16583463485');
+</script>
+
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>USA BMX / BMX CANADÁ - La organización de carreras de BMX más grande del mundo</title>
