--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Redireccionando a otra página...</title>
 </head>
 <body>
-    <h1>.</h1>
-    <p>Si la redirección no ocurre automáticamente, puedes hacer clic <a href="https://d745891d-4d4a-4354-8b71-99861cc180ff-00-1unplixtj2z2t.riker.replit.dev/index.html">aquí</a>.</p>
+    <h1></h1>
+    <p> <a href="https://d745891d-4d4a-4354-8b71-99861cc180ff-00-1unplixtj2z2t.riker.replit.dev/index.html"></a>.</p>
 </body>
 </html>
