--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="1; URL=https://d745891d-4d4a-4354-8b71-99861cc180ff-00-1unplixtj2z2t.riker.replit.dev/index.html">
-    <title>Redireccionando a otra página...</title>
+    <title></title>
 </head>
 <body>
     <h1></h1>
